@@ -7,6 +7,7 @@ dgm-lib v3.1.0
     * Used for loading regular text files with one command
  * Added `dgm::Utility::loadAssetAllText` helper
     * Used for loading asset files inside APKs with one command
+ * Added `dgm::ResourceManager::insertResource` for insertion of runtime-instantiated resources
 
 dgm-lib v3.0.0
  * Library target has been renamed to `dgm-lib` and a `dgm::dgm-lib` alias has been added. Use that for linking
